[tool.poetry]
name = "th2-common-utils"
version = "2.1.0"
description = "Python library with useful functions for developers and QA needs"
authors = ["TH2-devs <th2-devs@exactprosystems.com>"]
readme = "README.md"
license = "Apache License 2.0"
homepage = "https://github.com/th2-net/th2-common-utils-py"
repository = "https://github.com/th2-net/th2-common-utils-py"
include = [
    "LICENSE",
]
packages = [
    {include = 'th2_common_utils'},
]

[tool.poetry.dependencies]
python = "^3.7"
th2-grpc-common = "^4.2"
sortedcollections = "2.*"
orjson = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
